--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "url": "https://github.com/chibat/chrome-extension-typescript-starter.git"
   },
   "dependencies": {
+    "leitner-box": "^1.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -25,11 +26,19 @@
     "@types/jest": "^29.5.0",
     "@types/react": "^18.0.29",
     "@types/react-dom": "^18.0.11",
+    "autoprefixer": "^10.4.20",
     "copy-webpack-plugin": "^9.0.1",
+    "css-loader": "^7.1.2",
     "glob": "^7.1.6",
     "jest": "^29.5.0",
+    "postcss": "^8.4.49",
+    "postcss-loader": "^8.1.1",
     "prettier": "^2.2.1",
     "rimraf": "^3.0.2 ",
+    "sass": "^1.82.0",
+    "sass-loader": "^16.0.3",
+    "style-loader": "^4.0.0",
+    "tailwindcss": "^3.4.15",
     "ts-jest": "^29.1.0",
     "ts-loader": "^8.0.0",
     "typescript": "^5.0.4",
