--- a/public/manifest.json
+++ b/public/manifest.json
@@ -15,10 +15,10 @@
   },
 
   "content_scripts": [
-      {
-          "matches": ["<all_urls>"],
-          "js": ["js/vendor.js", "js/content_script.js"]
-      }
+    {
+      "matches": ["<all_urls>"],
+      "js": ["js/vendor.js", "js/content_script.js"]
+    }
   ],
 
   "background": {
@@ -26,10 +26,12 @@
   },
 
   "permissions": [
-    "storage"
+    "storage",
+    "activeTab",
+    "scripting",
+    "contextMenus",
+    "unlimitedStorage"
   ],
 
-  "host_permissions": [
-    "<all_urls>"
-  ]
+  "host_permissions": ["<all_urls>"]
 }
