--- a/package.json
+++ b/package.json
@@ -22,14 +22,19 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.26.0",
+    "@babel/preset-react": "^7.26.3",
+    "@babel/preset-typescript": "^7.26.0",
     "@types/chrome": "0.0.158",
     "@types/jest": "^29.5.0",
     "@types/react": "^18.0.29",
     "@types/react-dom": "^18.0.11",
     "autoprefixer": "^10.4.20",
+    "babel-loader": "^9.2.1",
     "copy-webpack-plugin": "^9.0.1",
     "css-loader": "^7.1.2",
     "glob": "^7.1.6",
+    "html-webpack-plugin": "^5.6.3",
     "jest": "^29.5.0",
     "postcss": "^8.4.49",
     "postcss-loader": "^8.1.1",
