--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "url": "https://github.com/chibat/chrome-extension-typescript-starter.git"
   },
   "dependencies": {
+    "classnames": "^2.5.1",
     "leitner-box": "^1.0.6",
+    "rc-textarea": "^1.8.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -36,6 +38,7 @@
     "glob": "^7.1.6",
     "html-webpack-plugin": "^5.6.3",
     "jest": "^29.5.0",
+    "mini-css-extract-plugin": "^2.9.2",
     "postcss": "^8.4.49",
     "postcss-loader": "^8.1.1",
     "prettier": "^2.2.1",
