--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
     "url": "https://github.com/chibat/chrome-extension-typescript-starter.git"
   },
   "dependencies": {
+    "@enipx/react-rich-text-editor": "^1.0.3",
     "classnames": "^2.5.1",
     "leitner-box": "^1.0.6",
     "rc-textarea": "^1.8.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-infinite-scroll-component": "^6.1.0",
+    "scroll-into-view-if-needed": "^3.1.0"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.26.0",
@@ -48,7 +51,6 @@
     "style-loader": "^4.0.0",
     "tailwindcss": "^3.4.15",
     "ts-jest": "^29.1.0",
-    "ts-loader": "^8.0.0",
     "typescript": "^5.0.4",
     "webpack": "^5.94.0",
     "webpack-cli": "^4.0.0",
