--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-infinite-scroll-component": "^6.1.0",
-    "scroll-into-view-if-needed": "^3.1.0"
+    "scroll-into-view-if-needed": "^3.1.0",
+    "swr": "^2.2.5"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.26.0",
